welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: value && is not a member of Int
	if (((a && b)<=40 && (a && b)>=30) || ((a && b)<=50 && (a && b)>=40)) {
                ^