welcome.lessons.welcome.bat.bool1.In3050.scala.code
def in3050(a:Int, b:Int):Boolean = {
	if (((a && b)<=40 && (a && b)>=30) || ((a && b)<=50 && (a && b)>=40)) {
		return true
	} else {
		return false
	}
}
